<resources>
    <string name="app_name">Self</string>
    <string name="self_gratitude_journal">Self.Gratitude.Journal</string>
    <string name="grateful_text">What are you grateful for today</string>
    <string name="get_started">Get Started</string>
    <string name="password_hint">password</string>
    <string name="email_hint">Email</string>
    <string name="sign_up">sign up</string>
    <string name="or_text">Or</string>
    <string name="login">login</string>
    <string name="user_name">Username</string>
</resources>